[package]
name = "quinn-boring"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn-boring"
description = "BoringSSL crypto provider for quinn"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[features]
fips = ["boring/fips", "boring-sys/fips"]

[dependencies]
boring = "2.1.0"
boring-sys = "2.1.0"
bytes = "1"
foreign-types-shared = "0.3.1"
lru = "0.10.0"
once_cell = "1.17"
quinn = { version = "0.9.3", default_features = false, features = ["native-certs", "runtime-tokio"] }
quinn-proto = { version = "0.10.1", default-features = false }
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0.22"
assert_hex = "0.2.2"
assert_matches = "1.1"
clap = { version = "3.2", features = ["derive"] }
directories-next = "2"
hex-literal = "0.4.1"
ring = "0.16.7"
rcgen = "0.10.0"
rustls-pemfile = "1.0.0"
tokio = { version = "1.0.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2"

[[example]]
name = "server"

[[example]]
name = "client"
