[package]
name = "quinn-boring"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn-boring"
description = "BoringSSL crypto provider for quinn"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]
edition = "2021"
rust-version = "1.70"

[badges]
maintenance = { status = "passively-maintained" }

[features]
fips = ["boring/fips", "boring-sys/fips"]

[dependencies]
boring = "3.0.2"
boring-sys = "3.0.2"
bytes = "1"
foreign-types-shared = "0.3.1"
lru = "0.11.0"
once_cell = "1.17"
quinn = { version = "0.10.1", default_features = false, features = ["native-certs", "runtime-tokio"] }
quinn-proto = { version = "0.10.1", default-features = false }
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0.22"
assert_hex = "0.2.2"
assert_matches = "1.1"
clap = { version = "4.3", features = ["derive"] }
directories-next = "2"
hex-literal = "0.4.1"
ring = "0.17.5"
rcgen = "0.11.1"
rustls-pemfile = "1.0.0"
tokio = { version = "1.0.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2"

[[example]]
name = "server"

[[example]]
name = "client"
