[package]
name = "quinn-boring"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn-boring"
description = "BoringSSL crypto provider for quinn"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]
edition = "2021"
rust-version = "1.70"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["runtime-tokio"]
fips = ["boring/fips", "boring-sys/fips"]
runtime-tokio = ["quinn/runtime-tokio"]

[dependencies]
boring = "4"
boring-sys = "4"
bytes = "1"
foreign-types-shared = "0.3"
lru = "0.12"
once_cell = "1"
quinn = { version = "0.11", default-features = false }
quinn-proto = { version = "0.11", default-features = false }
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1"
clap = { version = "4", features = ["derive"] }
directories-next = "2"
hex-literal = "0.4"
rcgen = "0.13"
rustls-pemfile = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2"

[[example]]
name = "server"
required-features = ["runtime-tokio"]

[[example]]
name = "client"
required-features = ["runtime-tokio"]
